@@ -1,3 +1,8 @@
+Overview of changes in Gnome2-VFS 1.041
+=======================================
+
+* Get rid of the Gtk2 dependency.
+
 Overview of changes in Gnome2-VFS 1.040
 =======================================
 
